Fixed issue on mobile
Updated "Welcome" fonts size on mobile breakpoint

--- a/style/css/main.css
+++ b/style/css/main.css
@@ -649,13 +649,13 @@ header .logo svg {
 .welcome-wrapper {
   position: relative;
   height: 100vh;
-  padding: 25vh 0;
+  padding: 15vh 0;
   font-size: 1.2rem;
   text-shadow: 1px 1px 2px #0a0a0a;
   color: #ffffff;
 }
 .welcome-wrapper h1 {
-  font-size: 3rem;
+  font-size: 2.4rem;
 }
 .welcome-wrapper img {
   position: absolute;
@@ -730,6 +730,13 @@ header .logo svg {
 }
 
 @media only screen and (min-width: 768px) {
+  .welcome-wrapper {
+    padding: 25vh 0;
+    font-size: 1.2rem;
+  }
+  .welcome-wrapper h1 {
+    font-size: 3rem;
+  }
   .welcome-wrapper .search-filters p {
     display: inline-block;
     margin-right: 30px;
